--- a/Leaflet-Step-1/static/css/style.css
+++ b/Leaflet-Step-1/static/css/style.css
@@ -8,3 +8,17 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  line-height: 28px;
+  font-weight: bold;
+  font-size: large;
+  color: rgb(246, 247, 250);
+}
+.legend i {
+  width: 28px;
+  height: 28px;
+  float: left;
+  margin-right: 14px;
+  opacity: 0.7;
+}
