--- a/Leaflet-Step-1/static/css/style.css
+++ b/Leaflet-Step-1/static/css/style.css
@@ -13,12 +13,15 @@ html {
   line-height: 28px;
   font-weight: bold;
   font-size: large;
-  color: rgb(246, 247, 250);
+  padding: 6px 10px 6px 6px;
+  color: #333;
+  background: #fff;
+  border-radius: 5px;
 }
 .legend i {
   width: 28px;
   height: 28px;
   float: left;
   margin-right: 14px;
-  opacity: 0.7;
+  opacity: 1;
 }
